--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,79 +1,62 @@
-/* Space out content a bit */
 body {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  background-color: #258dc1;
+  color: white;
+  font-family: 'Avenir LT W01 55 Roman';
+  margin: 0;
+  padding: 0;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
+.number {
+  font-family: 'Futura-latin';
 }
 
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
-}
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
+.appImage {
+  background-image: url("http://webassets3.tado.com/img/content/home/tadocooling_iphone_revealing.png");
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  right: 0;
+  z-index: -1;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right;
 }
 
-/* Customize container */
-@media (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-}
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
+.container {
   text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
+  margin-top: 100px;
 }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
+.pledged {
+  margin-top: 50px;
+  position: relative;
 }
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
+.pledged .header {
+  position: absolute;
+  top: -30px;
+  font-size: 30px;
+}
+
+.pledged .value .currency {
+  font-size: 80px;
+  position: relative;
+  display: inline-block;
+}
+
+.pledged .value .number{
+  font-size: 150px;
+}
+
+.pledged .value .backers-container,
+.pledged .value .backers-container .number{
+  font-size: 30px;
+}
+
+.pledged .value .backers-container {
+  position: absolute;
+  right: 0;
+  width: 300px;
+  text-align: right;
 }
