--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,6 +4,7 @@ body {
   font-family: 'Avenir LT W01 55 Roman';
   margin: 0;
   padding: 0;
+   font-size: 40px;
 }
 
 .number {
@@ -25,39 +26,41 @@ body {
 
 .container {
   text-align: center;
-  margin-top: 100px;
+  margin-top: 5em;
 }
 
 .pledged {
-  margin-top: 50px;
+  margin-top: 1.5em;
   position: relative;
 }
 
 .pledged .header {
   position: absolute;
-  top: -30px;
-  font-size: 30px;
+  top: -1em;
+  font-size: 1em;
 }
 
 .pledged .value .currency {
-  font-size: 80px;
+  font-size: 2em;
   position: relative;
   display: inline-block;
-  padding-left: 20px;
+  padding-left: 0.5em;
 }
 
 .pledged .value .number{
-  font-size: 150px;
+  font-size: 5em;
 }
 
-.pledged .value .backers-container,
+.pledged .value .backers-container {
+ font-size: 0.5em;
+}
 .pledged .value .backers-container .number{
-  font-size: 30px;
+  font-size: 1em;
 }
 
 .pledged .value .backers-container {
   position: absolute;
   right: 0;
-  width: 300px;
+  width: 10em;
   text-align: right;
 }
